[workspace]
members = [
  "bb8_diesel",
  "juniper_relay",
  "meta_parser",
  "server",
  "typed_id",
  "web_session",
]

# Fast-track juniper update to tokio 1.0
[patch.crates-io]
juniper = { git = "https://github.com/dyedgreen/juniper", branch = "master" }
juniper_warp = { git = "https://github.com/dyedgreen/juniper", branch = "master" }
