[package]
name = "server"
version = "0.1.0"
authors = ["Tilman Roeder"]
edition = "2018"

[dependencies]
anyhow = "1.0"
askama = { version = "0.10.5", features = ["with-warp"] }
askama_warp = "0.11.0"
async-trait = "0.1.42"
base64 = "0.13"
bb8_diesel = { path = "../bb8_diesel" }
disposable = { path = "../disposable" }
chrono =  "0.4"
clokwerk = "0.3.5"
dotenv = "0.15"
diesel = { version = "1.4", features = ["sqlite", "chrono"] }
diesel_migrations = "1.4"
env_logger = "0.8"
futures-util = "0.3"
meta_parser = { path = "../meta_parser" }
juniper = { version = "0.15.7", features = ["chrono"] }
juniper_relay = { path = "../juniper_relay" }
juniper_warp = "0.7.0"
lettre = { version = "0.10.0-rc.3", features = ["tokio1", "tokio1-native-tls", "file-transport"] }
log = "0.4"
nanoid = "0.4"
once_cell = "1.7"
openssl = "*" # needed to compile with diesel for musl
pulldown-cmark = "0.8"
reqwest = { version = "0.11", features = ["gzip", "brotli", "stream", "json"] }
serde = { version = "1", features = ["derive"] }
validator = { version = "0.14.0", features = ["derive"] }
tantivy = "0.15.3"
tokio = { version = "1", features = ["full"] }
typed_id = { path = "../typed_id" }
warp = "0.3"
woothee = "0.11"

[dev-dependencies]
serde_json = "1"
